[package]
name = "arazzo-cli"
description = "CLI for Arazzo workflow execution"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords = ["arazzo", "cli", "workflow", "api"]
categories = ["command-line-utilities"]

[[bin]]
name = "arazzo"
path = "src/main.rs"

[dependencies]
arazzo-core = { path = "../arazzo-core" }
arazzo-exec = { path = "../arazzo-exec" }
arazzo-store = { path = "../arazzo-store" }
clap = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true }
url = { workspace = true }
sha2 = "0.10"
hex = "0.4"
async-trait = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0.17"
tempfile = "3.20.0"
